# PythonNNForFun

./: .gitignore  NN.ipynb  README.md  matrix_operations.py  network_components.py  pyproject.toml
src/: __init__.py  activation_functions.py  loss_functions.py  matrix_operations.py  network_components.py
src/pure_python/: activation_functions.py  loss_functions.py  matrix_operations.py  network_components.py
tests/: loss_functions_test.py  matrix_operations_test.py  test_loss_functions.py  test_matrix_operations.py  test_network_components.py
tests/pure_python/: loss_functions_test.py  matrix_operations_test.py  network_components_test.py
