[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Tejan <tej780@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
nbqa = "^1.7.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
